fix: advancing on responsive spacings

--- a/packages/web/public/css/custom.css
+++ b/packages/web/public/css/custom.css
@@ -140,6 +140,9 @@ button.fr-link:hover, .tee-router-link:hover {
   line-height: 2.5rem;
   color: #000091;
 }
+.tee-mb-none {
+  margin-bottom: 0 !important
+}
 
 /* TRACK CALLOUT */
 
@@ -336,6 +339,52 @@ button.fr-link:hover, .tee-router-link:hover {
   margin:0 5px 0 -2.2em;
   height: 1.5em;
   width: 1em;
+}
+
+/* PROGRAM INFOS - TILES */
+.fr-tee-detail-info-tile .fr-tile {
+  /* display: flex; */
+  align-items: center;
+  border: 1px solid #E5E5E5 !important;
+  border-bottom: none !important;
+}
+.fr-tee-detail-info-tile .fr-tile__body {
+  justify-content: start;
+}
+.fr-tee-detail-info-tile .fr-tile__title {
+  font-weight: normal;
+  font-size: 1rem !important;
+}
+.fr-tee-detail-info-tile .fr-tile__title:before {
+  background-size: 100% 0.25em;
+}
+.fr-tee-detail-info-tile .fr-tile__title::before {
+  background-image: linear-gradient(0deg, #000091, #000091) !important;
+}
+.fr-tee-detail-info-tile .fr-tile__desc {
+  font-weight: 700;
+}
+.fr-tee-detail-info-tile .fr-tile__pictogram {
+  text-align: center;
+}
+.fr-tee-detail-info-tile .fr-responsive-img {
+  width: 95px;
+}
+@media screen and (max-width:48em) {
+  .fr-tee-detail-info-tile .fr-tile {
+    background-color: #F5F5FE;
+    /* background-image: none !important; */
+    border: none !important;
+  }
+  .fr-tee-detail-info-tile .fr-tile__title:before {
+    background-size: 0.75em 100%;
+  }
+  .fr-tee-detail-info-tile .fr-tile__title::before {
+    background-image: linear-gradient(0deg, #6A6AF4, #6A6AF4) !important;
+  }
+  .fr-tee-detail-info-tile .fr-responsive-img {
+    width: 72px;
+  }
 }
 
 /* FORM */
